--- a/public/css/css.css
+++ b/public/css/css.css
@@ -9,11 +9,13 @@ body {
 img {
     object-fit: cover !important;
 }
+
 hr {
     height: 2px;
     background: rgb(58, 57, 57);
     border: none;
 }
+
 .row {
     display: flex;
     justify-content: space-between;
@@ -99,11 +101,13 @@ hr {
     margin: 0px auto;
 }
 
+
 /* Create a Scroll To Top Button */
 
 html {
     scroll-behavior: smooth;
 }
+
 #myBtn {
     display: none;
     position: fixed;
@@ -129,6 +133,8 @@ html {
     transform: scale(1.1);
     transition: 0.5s;
 }
+
+
 /*  */
 
 #not_seen_box,
@@ -159,16 +165,25 @@ html {
     background: rgb(160, 6, 6);
     color: white;
 }
+
 .height-news {
     height: 75px;
     overflow: hidden;
     white-space: normal;
 }
+
 .height-newss {
     height: 60px;
     overflow: hidden;
     white-space: normal;
 }
+
+.height-newsss {
+    height: 40px;
+    overflow: hidden;
+    white-space: normal;
+}
+
 
 /*  */
 
@@ -785,7 +800,7 @@ button:focus {
 }
 
 
-/* menu nổi */
+/* menu n峄昳 */
 
 .fix {
     width: 100%;
@@ -977,6 +992,8 @@ button:focus {
     width: 5px;
     margin-right: 10px;
 }
+
+
 /*slide  */
 
 .slide {
@@ -1008,7 +1025,7 @@ button:focus {
 }
 
 
-/* xóa */
+/* x贸a */
 
 .list-theme {
     padding: 5px 15px;
@@ -1069,7 +1086,6 @@ button:focus {
 .results_search a {
     margin-bottom: 5px;
     box-sizing: border-box;
-   
 }
 
 .theme-selector {
@@ -1086,17 +1102,25 @@ button:focus {
 .height_img {
     height: 160px;
 }
+
 .height_imgg {
     height: 80px;
 }
+
+.height_imggg {
+    height: 300px;
+}
+
 .text-success {
     color: #00e600!important;
     font-size: 13px;
 }
+
 .text-danger {
     color: #e3342f!important;
     font-size: 13px;
 }
+
 .col-hover:hover {
     color: red;
     background: white;
@@ -1681,10 +1705,13 @@ footer {
     .menu {
         display: block;
     }
-     .height-news {
+    .height-news {
         height: 100%;
     }
-     .height-newss {
+    .height-newss {
+        height: 100%;
+    }
+    .height-newsss {
         height: 100%;
     }
     .menu .col-9 {
@@ -1702,7 +1729,7 @@ footer {
     .menu-none .menu-nav {
         display: none;
     }
-       .row .like [class*="col-"] {
+    .row .like [class*="col-"] {
         width: 50%;
     }
     .row .like {
@@ -1737,8 +1764,11 @@ footer {
     .height_img {
         height: 100%;
     }
-    .height_imgg{
-         height: 100%;
+    .height_imgg {
+        height: 100%;
+    }
+    .height_imggg {
+        height: 100%;
     }
     .list_category__li>li {
         height: auto;
@@ -1769,11 +1799,11 @@ footer {
     .search_img .row {
         display: flex;
     }
-    .search_img .row .col-3{
+    .search_img .row .col-3 {
         width: 25%;
     }
-     .search_img .row .col-9{
-          width: 75%;
+    .search_img .row .col-9 {
+        width: 75%;
     }
     /*  */
     .post .col-2 img {
