--- a/public/css/css.css
+++ b/public/css/css.css
@@ -1705,6 +1705,9 @@ footer {
     .menu {
         display: block;
     }
+    .col-10 {
+        margin: 0px;
+    }
     .height-news {
         height: 100%;
     }
